1999-11-09  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* utils/makedb/makedb.c:
	    When using NDBM format, if the STORE returns error with
	    errno=ENOSPC, we report that KEY.LEN+DATA.LEN exceed 1kB
	    which NDBM allows...

1999-11-04  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/readconfig.c, scheduler/threads.c, scheduler/conf.c,
	  scheduler/mailq.c, scheduler/mq2.c, scheduler/mq2auth.c,
	  scheduler/prototypes.h:
	    'mailq -Q' and 'mailq -QQ' work when scheduler runs with '-M2'
	    now :)  Authentication wants
		PARAMauthfile = "/path/to/scheduler.auth"
	    into the boilerplate defining section of the scheduler.conf,
	    and that file -- well, see the example. WORK IN PROGRESS!

	* scheduler/mq2.c, scheduler/mq2auth.c:
	    More of the theme...

	* configure.in, utils/Makefile.in, utils/md5sum.c:
	    Initial attempt at writing (from scratch)a MD5SUM
	    program, but for some reason the result is *not* the
	    same as GNU textutils one gives :-/  Perhaps it will
	    not matter in the end, though..

	* scheduler/Makefile.in, scheduler/transport.c, scheduler/mq2.c,
	  scheduler/scheduler.h, scheduler/prototypes.h:
	    Some more work on MAILQ-V2; now needs fleshing out only
	    the real protocol interpreter at  mq2.c: mq2interpret(),
	    and corresponding things in the system..

	* utils/policy-builder.sh.in:
	    Some script tweaks; removed externally sourced 'bad source
	    addresses' list pickups.

1999-11-02  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* include/md5.h, libc/md5c.c:
	    Move call-interface renaming macro into more
	    appropriate place..

	* proto/cf/server.cf:
	    Rectify report codes for EXPN and VRFY.

	* smtpserver/smtpserver.c:
	    Don't do ident query when in interactive mode.

	* smtpserver/smtpserver.c, smtpserver/smtpserver.h:
	    Call  s_setup()  with appropriate fd's for input,
	    and output.  Sometimes we are *not* running with
	    bidirectional socket as the point of contact..
